fix calendar days on dark mode

--- a/components/shared/Calendar/calendar.module.css
+++ b/components/shared/Calendar/calendar.module.css
@@ -25,6 +25,7 @@
   background-color: transparent;
   border: none;
   font-size: 1rem;
+  color: #000;
 }
 
 .dayToday {
